fixes a jump bug introduced in previous commit
fixes a jump bug introduced in previous commit

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ body {
 .navigation {
 	/* Collapsed by default*/
   width: 0;
-  overflow-x: hidden;
+  overflow: hidden;
   position: fixed;
   top: 0;
   right: 0;
